Misc fix. Align to trunk r8484

--- a/trunk/geonetwork-client-eea/src/main/resources/gisc/search/css/gisc.css
+++ b/trunk/geonetwork-client-eea/src/main/resources/gisc/search/css/gisc.css
@@ -13,6 +13,10 @@
 }
 
 /* added for GISC Catalogue header */
+#header div#headereea div {
+  float: none !important;
+  display: block !important;
+}
 #toolribbon {
     color: #315076;
     font-size: 80%;
